# esilv-agent

./: .env.example  .gitignore  Pipeline.md  README.md  assignment rules.md  pyproject.toml
agents/: __init__.py  orchestrator.py  registration.py  retrieval.py  super_agent.py  web_search.py
app/: __init__.py  agent_settings.py  conversation_store.py  main.py  models.py  registration_store.py  runtime.py  settings.py
docs/: registration_agent.md  super_agent_pipeline.md  web_search_pipeline.md
ingestion/: __init__.py  pdf_ingestion.py  uploads.py  vector_store.py
notebooks/: README.md
tests/: test_admin_page.py  test_agent_settings.py  test_conversation_store.py  test_orchestrator.py  test_pdf_ingestion.py  test_registration_agent.py  test_registration_store.py  test_retrieval.py  test_runtime.py  test_super_agent.py  test_super_agent_live.py  test_upload_registry.py  test_web_search.py
ui/: admin_page.py  chat_page.py  components.py
